<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note8</string>
    <string name="action_settings">Settings</string>
    <string name="add_new">Add New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="switch1">Switch view</string>
    <string name="lock">Lock</string>
    <string name="save">Save</string>
    <string name="error_field_required">Title note is required</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_cp_password">Retype password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_save_pass">Create</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm">The comfirmation password is not the same</string>
    <string name="error_incorrect_password">This password is incorrect</string>

</resources>